@@ -3,9 +3,9 @@
     = link_to_close edit_account_path(@account)
     = hidden_field_tag "account[user_id]", @current_user.id
     = f.error_messages
-    = render :partial => "accounts/top_section",  :locals => { :f => f }
-    = render :partial => "accounts/contact_info", :locals => { :f => f }
-    = render :partial => "accounts/permissions",  :locals => { :f => f }
+    = render :partial => "accounts/top_section",  :locals => { :f => f, :edit => true }
+    = render :partial => "accounts/contact_info", :locals => { :f => f, :edit => true }
+    = render :partial => "accounts/permissions",  :locals => { :f => f, :edit => true }
     .buttonbar
       = f.submit "Save Account" 
       or 
