@@ -4,9 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
-Fri, Mar 28, 2009
+Sat, Mar 28, 2009
 ---------------------------------------------------------------------
-- Fixed editing shared permissions bug.
+- Fixed updating permissions bug in [uses_user_permissions] plugin.
+- Fixed editing shared permissions for opportunities, contacts, and accounts.
 
 Thu, Mar 26, 2009
 ---------------------------------------------------------------------
